--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <p> This is a new repo.</p>
-<p> this is a new feature</p>
+<p> this is a new feature2</p>
 <p> this is web development learn it well</p>
