--- a/index.html
+++ b/index.html
@@ -1,3 +1,90 @@
-<p> This is a new repo.</p>
-<p> this is a new feature2</p>
-<p> this is web development learn it well</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <style>
+        div {
+             font-family: Verdana;
+             font-size: larger;
+             border-radius: 15px 50px;
+             background: url(https://img.freepik.com/free-vector/abstract-watercolor-pastel-background_87374-139.jpg);
+             background-position: left top;
+             background-repeat: repeat;
+             padding: 45px;
+             width: 250px;
+             height: 250px;
+             margin-right: auto;
+             display: flexbox;
+
+        }   
+       a{
+        color: blue;
+       }
+       im {
+        display: inline-block;
+       }
+    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fitness Club</title>
+</head>
+<body>
+    <h1 style="text-align: center;">Fitness Club</h1>
+    <br>
+    
+    <img src="image1.png" alt="exercise" class="im">
+    <h1 style="text-align: center;" class="im">EXERCISE</h1>
+
+    <article style="display: inline-block; margin: 150;">
+    <div >  
+        <a href="exercise.html">EXERCISE</a>
+        <br>
+        <ul style="text-align: left;">
+        <li style="text-align: left;"> boosts brainpower</li>
+        <br>
+        <li style="text-align: left;"> boosts performance</li>
+        <br>
+        <li style="text-align: left;"> regular  improves sleep quality</li>
+        <br>
+        <li style="text-align: left;"> reduces stress</li>
+        <br>
+        </ul>
+        </div>
+        </article>
+
+    
+    <article style="display: inline-block; margin:100px;">
+        <div >  
+            <br>
+            <a href="exercise.html">YOGA</a>
+            <br>
+        <ul style="text-align: left;" class="yo">
+        <li style="text-align: left;">  benefits heart health</li>
+        <br>
+        <li style="text-align: left;">  increases flexibility</li>
+        <br>
+        <li style="text-align: left;">  increases respiration,energy</li>
+        <br>
+        <li style="text-align: left;">  maintains a balanced metabolism</li>
+        <br>
+        </ul>
+        </div>
+        </article>
+
+        <article style="display: inline-block; margin:100px;">
+            <div >
+                <br>  
+                <a href="exercise.html">DIET</a>
+            <ul style="text-align: left;" class="di">
+            <li style="text-align: left;"> helps in increase our energy levels</li>
+            <br>
+            <li style="text-align: left;"> may help in reducing your diseases </li>
+            <br>
+            <li style="text-align: left;">helps to live longer</li>
+            <br>
+            <li style="text-align: left;">boosts immunity </li>
+            <br>
+            </ul>
+            </div>
+            </article>
+</body>
+</html>
